app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

  *{
    margin: 0;
    padding: 0;
  }

  main{
    height: 80vh;
    background-color: green;
  }

 nav{
  display: flex;
  height: 10vh;
  background-color: blue;
  align-items: center;
  justify-content: space-between;
  padding: 0 15px;
 }

 footer{
  justify-content: space-between;
  display: flex;
  height: 10vh;
  align-items: center;
  padding: 0 15px;
 }

 .logo {
   height: 60%;
   width: 100px;
   background-color: red;
 }

 .nav-links {
  height: 20px;
 }

 .featured {
   height: 50vh;
   width: 100vw;
  background-color: yellow;
 }

